--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ group 'pushnotification.push_notification'
 version '1.0-SNAPSHOT'
 
 buildscript {
+    namespace "pushnotification.push_notification"
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
