--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,12 +2,11 @@ group 'pushnotification.push_notification'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.6.20'
+    ext.kotlin_version = '1.9.10'  // Update to match your app's Kotlin version
     repositories {
         google()
         mavenCentral()
     }
-
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -36,6 +35,11 @@ android {
         minSdkVersion 19
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"  // Ensure Kotlin targets JVM 1.8
+    }
+
     lintOptions {
         disable 'InvalidPackage'
     }
